--- a/index.html
+++ b/index.html
@@ -746,20 +746,23 @@ body.fade-in {
   <button class="arrow left" onclick="prevPhoto(event)">❮</button>
 
   <div class="carousel-stage">
-    <img src="https://i.imgur.com/xzJLiFl.jpeg " class="photo">
-    <img src="https://i.imgur.com/6ctjZWF.jpeg " class="photo">
-    <img src="https://i.imgur.com/dyJ7u9b.jpeg " class="photo">
-    <img src="https://i.imgur.com/xzJLiFl.jpeg " class="photo">
-    <img src="https://i.imgur.com/6ctjZWF.jpeg " class="photo">
-    <img src="https://i.imgur.com/dyJ7u9b.jpeg" class="photo">
-    <img src="https://i.imgur.com/xzJLiFl.jpeg " class="photo">
-    <img src="https://i.imgur.com/6ctjZWF.jpeg " class="photo">
-    <img src="https://i.imgur.com/dyJ7u9b.jpeg" class="photo">
-    <img src="https://i.imgur.com/xzJLiFl.jpeg " class="photo">
-    <img src="https://i.imgur.com/6ctjZWF.jpeg " class="photo">
-    <img src="https://i.imgur.com/dyJ7u9b.jpeg" class="photo">
-    <img src="https://i.imgur.com/xzJLiFl.jpeg " class="photo">
-    <img src="https://i.imgur.com/6ctjZWF.jpeg " class="photo">
+    <img src="img1.jpeg " class="photo">
+    <img src="img2.jpeg " class="photo">
+    <img src="img3.jpeg " class="photo">
+    <img src="img4.jpeg " class="photo">
+    <img src="img5.jpeg " class="photo">
+    <img src="img6.jpeg" class="photo">
+    <img src="img7.jpeg " class="photo">
+    <img src="img8.jpeg " class="photo">
+    <img src="img9.jpeg" class="photo">
+    <img src="img10.jpeg " class="photo">
+    <img src="img11.jpeg " class="photo">
+    <img src="img12.jpeg" class="photo">
+    <img src="img13.jpeg " class="photo">
+    <img src="img14.jpeg " class="photo">
+    <img src="img15.jpeg " class="photo">
+    <img src="img16.jpeg " class="photo">
+    <img src="img17.jpeg " class="photo">
     <!-- add all 17 photos here -->
   </div>
 
@@ -997,4 +1000,5 @@ function goHome() {
 
 </body>
 </html>
+
 
