--- a/index.html
+++ b/index.html
@@ -1043,7 +1043,7 @@ function checkLogin() {
   const error = document.getElementById("loginError");
 
   const correctUser = "aami";
-  const correctPass = "201024";
+  const correctPass = "aami";
 
   if (user === correctUser && pass === correctPass) {
     error.style.display = "none";
@@ -1061,6 +1061,7 @@ function checkLogin() {
 
 </body>
 </html>
+
 
 
 
