--- a/index.html
+++ b/index.html
@@ -643,21 +643,21 @@ body.fade-in {
   <div class="gifts">
     <div class="flip" onclick="go('quiz')">
       <div class="gift-inner">
-        <div class="gift-front">🎁</div>
+        <div class="gift-front">Gift 1🎁</div>
         <div class="gift-back">Quiz 💕</div>
       </div>
     </div>
 
     <div class="flip" onclick="go('photos')">
       <div class="gift-inner">
-        <div class="gift-front">🎁</div>
+        <div class="gift-front">Gift2🎁</div>
         <div class="gift-back">Us 📸</div>
       </div>
     </div>
 
     <div class="flip" onclick="go('letter')">
       <div class="gift-inner">
-        <div class="gift-front">🎁</div>
+        <div class="gift-front">Gift 3🎁</div>
         <div class="gift-back">For You 💌</div>
       </div>
     </div>
@@ -1061,6 +1061,7 @@ function checkLogin() {
 
 </body>
 </html>
+
 
 
 
