--- a/index.html
+++ b/index.html
@@ -616,8 +616,7 @@ body.fade-in {
 
 <!-- LOGIN -->
  <section id="login" class="active login">
-  <h1>Just for you 💖</h1>
-  <p>Only my favorite person can enter</p>
+  <h1>Only for my favorite person💖</h1>
   <form onsubmit="checkLogin(); return false;">
   <input type="text" id="username" placeholder="Your nickname 🥰" autocapitalize="off" autocomplete="off">
   <input type="password" id="password" placeholder="The moment you are mine 💌">
@@ -1061,6 +1060,7 @@ function checkLogin() {
 
 </body>
 </html>
+
 
 
 
