--- a/index.html
+++ b/index.html
@@ -836,6 +836,7 @@ body.fade-in {
     <img src="img15.jpeg " class="photo">
     <img src="img16.jpeg " class="photo">
     <img src="img17.jpeg " class="photo">
+    <img src="img18.jpeg " class="photo">
     <!-- add all 17 photos here -->
   </div>
 
@@ -1109,6 +1110,7 @@ function checkLogin() {
 
 </body>
 </html>
+
 
 
 
