--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@ section {
   display: none;
   padding: 30px 20px;
   animation: fade 0.5s ease;
+  overflow: hidden;
 }
+
 
 section.active {
   display: flex;
@@ -627,6 +629,59 @@ body.fade-in {
   font-size: 14px;
 }
 
+
+ /* WHY I LOVE YOU PAGE */
+.why-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 14px;
+  margin: 30px auto;
+  max-width: 1000px;
+}
+
+
+.why-card {
+  position: relative;
+  background: #4b1e2a;
+  border-radius: 16px;
+  padding: 18px 12px;
+  cursor: pointer;
+  overflow: hidden;
+  min-height: 95px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.25);
+  font-size: 13px;
+}
+
+
+.why-text {
+  opacity: 0;
+  transition: opacity 0.4s ease;
+  font-size: 13px;
+  line-height: 1.3;
+}
+
+
+.why-card.revealed .why-text {
+  opacity: 1;
+}
+
+.curtain {
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(135deg,#ff9a9e,#fad0c4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 26px;
+  transition: transform 0.6s ease;
+  border-radius: 18px;
+}
+
+.why-card.revealed .curtain {
+  transform: translateY(-100%);
+}
+
+
   
 </style>
 </head>
@@ -695,9 +750,77 @@ body.fade-in {
     </div>
   </div>
 
-  <button class="cute-btn" onclick="go('final')">Next ❤️</button>
+  <button class="cute-btn" onclick="go('why')">Next ❤️</button>
 </section>
 
+
+
+ <!-- WHY I LOVE YOU -->
+<section id="why">
+  <h1>Why I Love You 💌</h1>
+  <p style="opacity:0.9;">Tap each card slowly… 🥺</p>
+
+  <div class="why-grid">
+
+    <!-- 10 CARDS -->
+    <div class="why-card" onclick="revealCard(this)">
+      <div class="curtain">💗</div>
+      <div class="why-text">Your smile melts my heart every single time.</div>
+    </div>
+
+    <div class="why-card" onclick="revealCard(this)">
+      <div class="curtain">💗</div>
+      <div class="why-text">You make ordinary days feel magical.</div>
+    </div>
+
+    <div class="why-card" onclick="revealCard(this)">
+      <div class="curtain">💗</div>
+      <div class="why-text">You understand me without me explaining.</div>
+    </div>
+
+    <div class="why-card" onclick="revealCard(this)">
+      <div class="curtain">💗</div>
+      <div class="why-text">You make me feel safe and at home.</div>
+    </div>
+
+    <div class="why-card" onclick="revealCard(this)">
+      <div class="curtain">💗</div>
+      <div class="why-text">You support me even in my worst moods.</div>
+    </div>
+
+    <div class="why-card" onclick="revealCard(this)">
+      <div class="curtain">💗</div>
+      <div class="why-text">Your laugh is my favorite sound.</div>
+    </div>
+
+    <div class="why-card" onclick="revealCard(this)">
+      <div class="curtain">💗</div>
+      <div class="why-text">You choose me every single day.</div>
+    </div>
+
+    <div class="why-card" onclick="revealCard(this)">
+      <div class="curtain">💗</div>
+      <div class="why-text">You make my world softer and brighter.</div>
+    </div>
+
+    <div class="why-card" onclick="revealCard(this)">
+      <div class="curtain">💗</div>
+      <div class="why-text">You love me in ways I never knew I needed.</div>
+    </div>
+
+    <div class="why-card" onclick="revealCard(this)">
+      <div class="curtain">💗</div>
+      <div class="why-text">Because life feels right with you in it.</div>
+    </div>
+
+  </div>
+
+  <button class="cute-btn" onclick="go('final')">Next 💕</button>
+  <button class="cute-btn" onclick="go('gifts')">⬅ Back</button>
+</section>
+
+
+  
 <!-- GIFT 1: QUIZ -->
 <section id="quiz">
   <h1>Quick Question 😘</h1>
@@ -1104,12 +1227,24 @@ function checkLogin() {
   }
 }
 
+function revealCard(card) {
+  if (!card.classList.contains("revealed")) {
+    card.classList.add("revealed");
+
+    const rect = card.getBoundingClientRect();
+    heartSparkle(
+      rect.left + rect.width / 2,
+      rect.top + rect.height / 2
+    );
+  }
+}
 
   
 </script>
 
 </body>
 </html>
+
 
 
 
