--- a/index.html
+++ b/index.html
@@ -1366,7 +1366,7 @@ function closeSecret() {
   const counter = document.getElementById("foreverCounter");
   if (counter) {
     counter.innerHTML = `
-  💖 <strong>${diffDays}</strong> days together<br>
+  💖 <strong>${diffDays}</strong> days of us<br>
   <span style="font-size:0.85rem; opacity:0.9;">
     and counting forever…
   </span>
@@ -1380,6 +1380,7 @@ function closeSecret() {
 
 </body>
 </html>
+
 
 
 
