--- a/index.html
+++ b/index.html
@@ -1308,7 +1308,9 @@ function checkLogin() {
 
   if (user === correctUser && pass === correctPass) {
     error.style.display = "none";
-
+const music = document.getElementById("bgMusic");
+    music.volume = 0.4;   // soft romantic volume
+    music.play().catch(() => {});
     // ✅ move to intro page safely
     go("intro");
   } else {
@@ -1378,8 +1380,14 @@ function closeSecret() {
   
 </script>
 
+
+<audio id="bgMusic" loop>
+  <source src="love.mp3" type="audio/mpeg">
+</audio>
+ 
 </body>
 </html>
+
 
 
 
