--- a/index.html
+++ b/index.html
@@ -746,13 +746,47 @@ body.fade-in {
   box-shadow: inset 0 0 0 1px rgba(255,255,255,0.3);
 }
 
- #musicToggle {
-  transition: 0.3s ease;
+#musicToggle {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: none;
+  background: white;
+  color: #e75480;
+  font-size: 22px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  cursor: pointer;
+  box-shadow: 0 10px 22px rgba(0,0,0,0.25);
+  transition: 0.25s ease;
 }
 
-#musicToggle:hover {
-  transform: scale(1.1);
+#musicToggle:active {
+  transform: scale(0.9);
 }
+
+#volumeControls {
+  margin-top: 6px;
+  display: flex;
+  gap: 6px;
+  justify-content: center;
+}
+
+#volumeControls button {
+  width: 26px;
+  height: 26px;
+  border-radius: 50%;
+  border: none;
+  background: white;
+  color: #e75480;
+  font-size: 14px;
+  cursor: pointer;
+  box-shadow: 0 5px 14px rgba(0,0,0,0.2);
+}
+
 
   
 </style>
@@ -1320,7 +1354,8 @@ const music = document.getElementById("bgMusic");
     const btn = document.getElementById("musicToggle");
     music.volume = 0.4;   // soft romantic volume
     music.play().catch(() => {});
-    btn.style.display = "block";   // 👈 SHOW BUTTON AFTER LOGIN
+    document.getElementById("musicControls").style.display = "block";
+  // 👈 SHOW BUTTON AFTER LOGIN
     // ✅ move to intro page safely
     go("intro");
   } else {
@@ -1387,18 +1422,34 @@ function closeSecret() {
   }
 }
 
- function toggleMusic() {
-  const music = document.getElementById("bgMusic");
-  const btn = document.getElementById("musicToggle");
+const music = document.getElementById("bgMusic");
+const musicBtn = document.getElementById("musicToggle");
 
+musicBtn.addEventListener("click", toggleMusic);
+
+function toggleMusic() {
   if (music.paused) {
     music.play();
-    btn.innerHTML = "🎵";
+    musicBtn.innerHTML = "🎵";
   } else {
     music.pause();
-    btn.innerHTML = "🔇";
+    musicBtn.innerHTML = "🔇";
   }
 }
+
+function changeVolume(amount) {
+  let newVolume = music.volume + amount;
+
+  if (newVolume > 1) newVolume = 1;
+  if (newVolume < 0) newVolume = 0;
+  if (music.volume === 0) {
+  musicBtn.innerHTML = "🔇";
+}
+
+
+  music.volume = newVolume;
+}
+
  
 </script>
 
@@ -1407,27 +1458,28 @@ function closeSecret() {
   <source src="love.mp3" type="audio/mpeg">
 </audio>
 
- <button id="musicToggle" onclick="toggleMusic()" style="
+<div id="musicControls" style="
   position: fixed;
   bottom: 20px;
   right: 20px;
-  border-radius: 50%;
-  width: 45px;
-  height: 45px;
-  border: none;
-  background: white;
-  color: #e75480;
-  font-size: 18px;
-  cursor: pointer;
-  box-shadow: 0 8px 18px rgba(0,0,0,0.2);
   display: none;
   z-index: 1000;
+  text-align: center;
 ">
-🎵
-</button>
+
+  <button id="musicToggle">🎵</button>
+
+  <div id="volumeControls">
+    <button onclick="changeVolume(-0.1)">–</button>
+    <button onclick="changeVolume(0.1)">+</button>
+  </div>
+
+</div>
+
  
 </body>
 </html>
+
 
 
 
