--- a/index.html
+++ b/index.html
@@ -1350,13 +1350,13 @@ function checkLogin() {
 
   if (user === correctUser && pass === correctPass) {
     error.style.display = "none";
-const music = document.getElementById("bgMusic");
-    const btn = document.getElementById("musicToggle");
-    music.volume = 0.4;   // soft romantic volume
-    music.play().catch(() => {});
-    document.getElementById("musicControls").style.display = "block";
-  // 👈 SHOW BUTTON AFTER LOGIN
-    // ✅ move to intro page safely
+  const music = document.getElementById("bgMusic");
+  const btn = document.getElementById("musicToggle");
+
+  music.volume = 0.4;
+  music.play().catch(() => {});
+  
+  btn.style.display = "block";   // 👈 SHOW BUTTON AFTER LOGIN
     go("intro");
   } else {
     error.style.display = "block";
@@ -1422,33 +1422,20 @@ function closeSecret() {
   }
 }
 
-const music = document.getElementById("bgMusic");
-const musicBtn = document.getElementById("musicToggle");
-
-musicBtn.addEventListener("click", toggleMusic);
 
 function toggleMusic() {
+  const music = document.getElementById("bgMusic");
+  const btn = document.getElementById("musicToggle");
+
   if (music.paused) {
     music.play();
-    musicBtn.innerHTML = "🎵";
+    btn.innerHTML = "🎵";
   } else {
     music.pause();
-    musicBtn.innerHTML = "🔇";
+    btn.innerHTML = "🔇";
   }
 }
 
-function changeVolume(amount) {
-  let newVolume = music.volume + amount;
-
-  if (newVolume > 1) newVolume = 1;
-  if (newVolume < 0) newVolume = 0;
-  if (music.volume === 0) {
-  musicBtn.innerHTML = "🔇";
-}
-
-
-  music.volume = newVolume;
-}
 
  
 </script>
@@ -1458,27 +1445,31 @@ function changeVolume(amount) {
   <source src="love.mp3" type="audio/mpeg">
 </audio>
 
-<div id="musicControls" style="
+<button id="musicToggle" onclick="toggleMusic()" style="
   position: fixed;
   bottom: 20px;
   right: 20px;
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  border: none;
+  background: white;
+  color: #e75480;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 0 8px 18px rgba(0,0,0,0.2);
   display: none;
   z-index: 1000;
   text-align: center;
 ">
+🎵
+</button>
 
-  <button id="musicToggle">🎵</button>
-
-  <div id="volumeControls">
-    <button onclick="changeVolume(-0.1)">–</button>
-    <button onclick="changeVolume(0.1)">+</button>
-  </div>
-
-</div>
 
  
 </body>
 </html>
+
 
 
 
